# Fizz-Engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
editor/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/application/: window.hpp
engine/include/foundation/: allocators.hpp  platform.hpp  resource_pool.hpp
engine/include/renderer/: device.hpp  gpu_resources.hpp  renderer.hpp  vk_initializers.hpp  vk_types.hpp  vk_utils.hpp
engine/source/: engine.cpp
engine/source/application/: window.cpp
engine/source/foundation/: allocators.cpp  resource_pool.cpp
engine/source/renderer/: device.cpp  gpu_resources.cpp  renderer.cpp  vk_initializers.cpp  vk_utils.cpp
shaders/: gradient.comp.slang
